2021-09-06  Dmitry V. Levin  <ldv@altlinux.org>

	* objdump.c (show_disasm): Replace asprintf followed by
	error(EXIT_FAILURE) with xasprintf.
	* readelf.c (handle_gnu_hash): Likewise.
	* unstrip.c (handle_output_dir_module, main): Likewise.

	* elflint.c (check_sections): Remove cast of xcalloc return value.
	* findtextrel.c (process_file): Remove casts of malloc and realloc
	return values.
	* nm.c (get_local_names, show_symbols_sysv, show_symbols): Remove
	casts of xmalloc return values.
	* readelf.c (print_hash_info, handle_sysv_hash, handle_sysv_hash64,
	handle_gnu_hash): Remove cast of xcalloc return value.
	(print_debug_units): Remove casts of xmalloc return values.
	* strip.c (handle_elf): Remove casts of xcalloc and xmalloc return
	values.

2021-09-05  Dmitry V. Levin  <ldv@altlinux.org>

	* Makefile.am (AM_LDFLAGS): Add $(STACK_USAGE_NO_ERROR).

2021-08-20  Saleem Abdulrasool  <abdulras@google.com>

	* elfclassify.c: Remove error.h include.

2021-03-18  Timm Bäder  <tbaeder@redhat.com>

	* readelf.c (run_advance_pc): New static inline function
	lifted from...
	(print_debug_line_section): ... here. Define advance_pc
	using run_advance_pc.

2021-07-03  Mark Wielaard  <mark@klomp.org>

	* readelf.c (compare_listptr): Fix dwarf_attr_name argument.

2021-06-18  Mark Wielaard  <mark@klomp.org>

	* unstrip.c (adjust_relocs): Check gelf_getrel and geld_getrela.

2021-06-18  Mark Wielaard  <mark@klomp.org>

	* strip.c (remove_debug_relocations): Check gelf_update results.
	(update_section_size): Likewise.

2021-06-06  Sergei Trofimovich  <slyfox@gentoo.org>

	* elflint.c (buffer_left): Mark as 'static' to avoid external linkage
	failure.

2021-05-12  Dmitry V. Levin  <ldv@altlinux.org>

	* elfcompress.c (process_file): Return 1 instead of -1 in case of an
	error.

	* elfcompress.c (process_file): Remove redundant assignment in case of
	"Nothing to do".

	* elfcompress.c (process_file): Set res to 0 in case of "Nothing to do".
